--- a/prestamista/busqueda/css/busqavanzada.css
+++ b/prestamista/busqueda/css/busqavanzada.css
@@ -111,7 +111,7 @@ body{
 
 /** start busqavanzada css **/
 div.contenedorbusq{
-  margin:60px 10px 10px 10px;
+  margin: 10px;
   padding: 10px;
   background-color: #ffffff;
   /*border: 1px solid #252323;*/
